fix the dashboard card issue

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,158 +1,9 @@
 <div class="container mt-5">
-<h1>Tokotai <%= current_user.nickname %> !</h1>
-  <% if current_user.traveller? %>
-  <h2>My trips</h2>
-  <% @bookings.each do |booking| %>
-  <% unless booking.completed? %>
-     <div class="trip-card">
-         <div class="trip-notif">
-           <% if current_user.avatar.attached? %>
-             <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
-           <% else %>
-             <%= image_tag "no-profile.png", class: "avatar" %>
-           <% end %>
-           <p>Request sent to <%= booking.planet.user.first_name %></p>
-         </div>
-         <div class="trip-details">
-             <%= cl_image_tag booking.planet.photos.first.key %>
-           <div class="trip-info">
-             <div class="trip-header">
-               <h2><%= booking.planet.name %></h2>
-               <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
-             </div>
-             <div class="trip-booking-info">
-               <div class="trip-icons">
-                 <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
-                 <% booking.planet.environments.each do |env| %>
-                   <i class="<%= env.icon %>"></i>
-                 <% end %>
-               </div>
-               <div class="trip-price">
-                 <p>Total</p>
-                 <p><%= booking.cost %></p>
-               </div>
-             </div>
-             <% unless booking.approved? %>
-             <div class="trip-footer">
-               <p> <strong>Status:</strong> pending...</p>
-             </div>
-             <% end %>
-           </div>
-         </div>
-     </div>
-   <% end %>
-   <% end %>
-  <h2>Keep exploring</h2>
-  <div class="planet-grid">
-    <% @planets.take(2).each do |planet| %>
-      <%= link_to planet_path(planet) do %>
-       <div class="card-planet">
-          <%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
-          <div class="card-planet-infos">
-            <div class="card-planet-infos-text">
-              <h2> <%= planet.name %></h2>
-              <p><%= planet.longitude %> <%= planet.latitude %></p>
-              <div class="card-planet-infos-icons">
-                <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
-                <% planet.environments.each do |env| %>
-                  <i class="<%= env.icon %>"></i>
-                <% end %>
-              </div>
-            </div>
-            <div class="card-planet-infos-price">
-              <p>Rate:</p>
-              <div class="card-planet-pricing">
-                <p><%= planet.rate %></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-
-
-  <% end %>
-
+  <h1>Kia ora <%= current_user.nickname %> !</h1>
+  <!-- code for overlord dashboard -->
   <% if current_user.overlord? %>
     <h2>Requests</h2>
-  <% @bookings.each do |booking| %>
-    <% unless booking.completed? %>
-       <div class="trip-card">
-           <div class="trip-notif">
-             <% if current_user.avatar.attached? %>
-               <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
-             <% else %>
-               <%= image_tag "no-profile.png", class: "avatar" %>
-             <% end %>
-             <p>Request sent to <%= booking.planet.user.first_name %></p>
-           </div>
-           <div class="trip-details">
-               <%= cl_image_tag booking.planet.photos.first.key %>
-             <div class="trip-info">
-               <div class="trip-header">
-                 <h2><%= booking.planet.name %></h2>
-                 <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
-               </div>
-               <div class="trip-booking-info">
-                 <div class="trip-icons">
-                   <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
-                   <% booking.planet.environments.each do |env| %>
-                     <i class="<%= env.icon %>"></i>
-                   <% end %>
-                 </div>
-                 <div class="trip-price">
-                   <p>Total</p>
-                   <p><%= booking.cost %> <i class="fab fa-gitkraken"></i></p>
-                 </div>
-               </div>
-               <% unless booking.approved? %>
-               <div class="trip-footer">
-                 <p> <strong>Status:</strong> pending...</p>
-               </div>
-               <% end %>
-             </div>
-           </div>
-       </div>
-     <% end %>
-     <% end %>
-     <div class="header-explore"><h2>Keep exploring</h2>
-      <%= link_to 'more', planets_path, class: "ghost" %>
-     </div>
-
-    <div class="planet-grid">
-      <% @planets.take(5).each do |planet| %>
-        <%= link_to planet_path(planet) do %>
-         <div class="my-planet-card">
-            <%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
-            <div class="my-planet-infos">
-              <div class="card-planet-infos-text">
-                <h2> <%= planet.name %></h2>
-                <p><%= planet.longitude %> <%= planet.latitude %></p>
-                <div class="card-planet-infos-icons">
-                  <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
-                  <% planet.environments.each do |env| %>
-                    <i class="<%= env.icon %>"></i>
-                  <% end %>
-                </div>
-              </div>
-              <div class="card-planet-infos-price">
-                <p>Rate:</p>
-                <div class="card-planet-pricing">
-                  <p><%= planet.rate %> <i class="fab fa-gitkraken"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-
-
-    <% end %>
-
-  <% if current_user.overlord? %>
-    <h2>Requests</h2>
+    <!-- booking code -->
     <% @bookings.each do |booking| %>
       <% unless booking.completed? %>
          <div class="trip-card">
@@ -165,7 +16,6 @@
                <p><%= booking.user.first_name %> sent you a request</p>
             </div>
             <div class="trip-details">
-
                 <%= cl_image_tag booking.planet.photos.first.key %>
               <div class="trip-info">
                 <div class="trip-header">
@@ -198,7 +48,9 @@
           </div>
         <% end %>
        <% end %>
+
          <h2>My planets</h2>
+         <!-- overlord planets -->
          <div class="my-planet-grid">
            <% current_user.planets.each do |planet| %>
              <div class="my-planet-card">
@@ -224,12 +76,87 @@
                </div>
              </div>
            <% end %>
+           <% end %>
          </div>
-
        <% end %>
-      </div>
-    <% end %>
 
+<!-- code for traveller -->
+  <% if current_user.traveller? %>
+  <h2>My Trips</h2>
+    <% @bookings.each do |booking| %>
+      <% unless booking.completed? %>
+         <div class="trip-card">
+            <div class="trip-notif">
+               <% if current_user.avatar.attached? %>
+                 <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
+               <% else %>
+                 <%= image_tag "no-profile.png", class: "avatar" %>
+               <% end %>
+               <p>Request sent to <%= booking.planet.user.first_name %></p>
+            </div>
+             <div class="trip-details">
+                 <%= cl_image_tag booking.planet.photos.first.key %>
+               <div class="trip-info">
+                 <div class="trip-header">
+                   <h2><%= booking.planet.name %></h2>
+                   <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
+                 </div>
+                 <div class="trip-booking-info">
+                     <div class="trip-icons">
+                       <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
+                       <% booking.planet.environments.each do |env| %>
+                         <i class="<%= env.icon %>"></i>
+                       <% end %> iteration envire
+                     </div>
+                     <div class="trip-price">
+                       <p>Total</p>
+                       <p><%= booking.cost %> <i class="fab fa-gitkraken"></i></p>
+                     </div>
+                 </div>
+               </div>
+             </div>
+             <% unless booking.approved? %>
+             <div class="request-status">
+               <p> <strong>Status:</strong> pending...</p>
+             </div>
+             <% end %>
+         </div>
+       <% end %>
+    <% end %>
+       <!-- explore the universe -->
+       <div class="header-explore"><h2>Keep exploring</h2>
+        <%= link_to 'more', planets_path, class: "ghost" %>
+       </div>
+
+       <div class="planet-grid">
+         <% @planets.take(5).each do |planet| %>
+           <%= link_to planet_path(planet) do %>
+            <div class="my-planet-card">
+               <%= cl_image_tag planet.photos.first.key, height: 300, width: 400, crop: :fill %>
+               <div class="my-planet-infos">
+                 <div class="card-planet-infos-text">
+                   <h2> <%= planet.name %></h2>
+                   <p><%= planet.longitude %> <%= planet.latitude %></p>
+                   <div class="card-planet-infos-icons">
+                     <i class="fab fa-reddit-alien"></i><span><%= planet.capacity %></span>
+                     <% planet.environments.each do |env| %>
+                       <i class="<%= env.icon %>"></i>
+                     <% end %>
+                   </div>
+                 </div>
+                 <div class="card-planet-infos-price">
+                   <p>Rate:</p>
+                   <div class="card-planet-pricing">
+                     <p><%= planet.rate %> <i class="fab fa-gitkraken"></i></p>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           <% end %>
+         <% end %>
+       </div>
+    <% end %>
+</div>
 
 
 
