add a cancel trip button

--- a/app/assets/stylesheets/components/_trip-list.scss
+++ b/app/assets/stylesheets/components/_trip-list.scss
@@ -9,6 +9,16 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   background-color: white;
   border-radius: 4px;
+  position: relative;
+  .destroy-icon{
+    position: absolute;
+    color: $pastel-red;
+    padding:8px;
+    right: 8px;
+    top: 8px;
+    z-index: 300;
+    font-size: 24px;
+  }
 }
 
 .trip-notif {
