--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -86,11 +86,14 @@
   <!-- end of overlord dashboard -->
 
 <!-- code for traveller -->
-  <% if current_user.traveller? %>
+<% if current_user.traveller? %>
   <h2>My Requests</h2>
     <% @bookings.each do |booking| %>
       <% unless booking.approved? %>
          <div class="trip-card">
+          <%= link_to booking_path(booking), method: :delete, class: "destroy-icon", title: 'Abort' do %>
+            <i class="fas fa-times"></i>
+          <% end %>
             <div class="trip-notif">
                <% if current_user.avatar.attached? %>
                  <%= cl_image_tag booking.planet.user.avatar.key, class: "avatar" %>
@@ -130,8 +133,8 @@
                </div>
          </div>
        <% end %>
-
     <% end %>
+<!-- code for upcoming invasion part -->
     <h2> Upcoming invasion</h2>
     <% if @bookings == [] %>
       <p> You don't have any upcoming invasion.
@@ -178,6 +181,7 @@
       </div>
     <% end %>
   <% end %>
+<!-- end of upcoming invasion part -->
        <!-- explore the universe -->
        <div class="header-explore"><h2>Keep exploring</h2>
         <%= link_to 'more', planets_path, class: "ghost" %>
@@ -210,7 +214,7 @@
            <% end %>
          <% end %>
        </div>
-    <% end %>
+<% end %>
 </div>
 
 
