--- a/app/views/planets/show.html.erb
+++ b/app/views/planets/show.html.erb
@@ -1,12 +1,12 @@
 
-<div class="container mt-5">
+<div class="container mt-1">
 
-  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner d-flex align-item-center">
+  <div id="carouselExampleControls" class="carousel slide " data-ride="carousel">
+    <div class="carousel-inner text-center">
 
       <% @planet.photos.each_with_index do |photo, index| %>
         <% if index == 0 %>
-          <div class="carousel-item active" style="width: 100%;">
+          <div class="carousel-item active img-fluid" style="width: 100%;">
             <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
           </div>
         <% else %>
@@ -26,7 +26,7 @@
     </a>
   </div>
     <!-- TODO style this button -->
-    <%= link_to "< back", planets_path, class: "showa" %>
+    <%= link_to "< back", planets_path, class: "ghost" %>
 
 
 
