changing navbar color

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
   justify-content: space-between;
   background: white;
   align-items: baseline;
+  background-color: $header-color;
 }
 
 .navbar-lewagon .navbar-collapse {
