finish to work on the dashboard

--- a/app/assets/stylesheets/components/_trip-list.scss
+++ b/app/assets/stylesheets/components/_trip-list.scss
@@ -1,3 +1,13 @@
+.requests{
+  margin: 24px;
+  text-align: center;
+  color: $header-color;
+}
+
+
+
+
+
 .container{
   overflow:scroll;
   height: 100%;
@@ -94,10 +104,6 @@
     margin: 8px 0;
   }
 }
-
-
-
-
 
 
 
