--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -3,9 +3,63 @@
   <!-- code for overlord dashboard -->
   <% if current_user.overlord? %>
     <h2>Requests</h2>
+    <div class="requests">
+      <% if @bookings.empty? || @new_bookings.empty? %>
+       <p> It looks like no one in the universe wants to invade your planets...</p>
+      <% end %>
+    </div>
     <!-- booking code -->
+    <% @new_bookings.each do |booking| %>
+         <div class="trip-card">
+            <div class="trip-notif">
+               <% if booking.user.avatar.attached? %>
+                 <%= cl_image_tag booking.user.avatar.key, class: "avatar" %>
+               <% else %>
+                 <%= image_tag "no-profile.png", class: "avatar" %>
+               <% end %>
+               <p><%= booking.user.first_name %> sent you a request</p>
+            </div>
+            <div class="trip-details">
+                <%= cl_image_tag booking.planet.photos.first.key %>
+              <div class="trip-info">
+                <div class="trip-header">
+                  <h2><%= booking.planet.name %></h2>
+                  <p>Long: <%= booking.planet.longitude %> Lat: <%= booking.planet.latitude %></p>
+                </div>
+                <div class="trip-booking-info">
+                  <div class="trip-icons">
+                    <i class="fab fa-reddit-alien"></i> <span> <%= booking.planet.capacity %></span>
+                    <% booking.planet.environments.each do |env| %>
+                      <i class="<%= env.icon %>"></i>
+                    <% end %>
+                  </div>
+                  <div class="trip-price">
+                    <p>Total</p>
+                    <p><%= booking.cost %> <i class="fab fa-gitkraken"></i></p>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="request-status">
+                <%= link_to approve_booking_path(booking),method: :patch, class: "btn-approve" do %>
+                <i class="far fa-check-circle"></i> Accept
+                <% end %>
+                <%= link_to reject_booking_path(booking),method: :patch, class: "btn-reject" do%>
+                <i class="fas fa-times"></i> Reject
+          <% end %>
+          </div>
+        </div>
+    <% end %>
+    <!-- end - booking code - overlord -->
+  <!-- code for upcoming invasion -->
+    <h2> Upcoming invasion</h2>
+    <div class="requests">
+      <% if @new_bookings == [] %>
+        <p> No upcoming invasions...</p>
+      <% end %>
+    </div>
     <% @bookings.each do |booking| %>
-      <% unless booking.completed? %>
+      <% if booking.approved? && !booking.completed? %>
          <div class="trip-card">
             <div class="trip-notif">
                <% if booking.user.avatar.attached? %>
@@ -51,9 +105,19 @@
           </div>
       <% end %>
     <% end %>
-    <!-- end - booking code - overlord -->
 
-    <!-- overlord-my-planet code -->
+
+
+
+
+
+
+
+
+
+
+
+  <!-- overlord-my-planet code -->
     <h2>My planets</h2>
       <div class="my-planet-grid">
         <% current_user.planets.each do |planet| %>
@@ -81,15 +145,23 @@
           </div>
         <% end %>
       </div>
-    <!-- overlord-my-planet code -->
+  <!-- overlord end of my-planet code -->
   <% end %>
   <!-- end of overlord dashboard -->
 
 <!-- code for traveller -->
 <% if current_user.traveller? %>
   <h2>My Requests</h2>
-    <% @bookings.each do |booking| %>
-      <% unless booking.approved? %>
+  <div class="requests">
+  <% if @new_bookings.empty? || @bookings == @rejected_bookings %>
+      <p> You don't have any upcoming invasion.
+        Explore the universe and plan your next invasion now!</p>
+        <%= link_to 'Explore', planets_path, class: "btn-rounded" %>
+  <% end %>
+  </div>
+
+  <% @bookings.each do |booking| %>
+    <% unless booking.approved? %>
          <div class="trip-card">
           <%= link_to booking_path(booking), method: :delete, class: "destroy-icon", title: 'Abort',data: {confirm: "Are you sure you want to abort this invasion?"}  do %>
             <i class="fas fa-times"></i>
@@ -132,17 +204,19 @@
                  <% end %>
                </div>
          </div>
-       <% end %>
-    <% end %>
+      <% end %>
+
 <!-- code for upcoming invasion part -->
     <h2> Upcoming invasion</h2>
-    <% if @bookings == [] %>
-      <p> You don't have any upcoming invasion.
-      Explore the universe and plan your next invasion now!</p>
-      <%= link_to 'more', planets_path, class: "btn-rounded" %>
-    <% end %>
+    <div class="requests">
+      <% if @accepted_bookings.empty? %>
+        <p> You don't have any upcoming invasion.
+        Explore the universe and plan your next invasion now!</p>
+        <%= link_to 'more', planets_path, class: "btn-rounded" %>
+      <% end %>
+    </div>
 
-  <% @bookings.each do |booking| %>
+  <% @accepted_bookings.each do |booking| %>
     <% if booking.approved? && !booking.completed? %>
       <div class="trip-card">
          <div class="trip-notif">
@@ -214,6 +288,7 @@
            <% end %>
          <% end %>
        </div>
+<% end %>
 <% end %>
 </div>
 
